# site-runner

./: ARCHITECTURE.md  CONTEXT.md  README.md  pyproject.toml
docs/adr/: 0001-general-purpose-engine-with-site-workspaces.md  0002-one-journey-yaml-two-run-types.md  0003-success-condition-documentary-with-optional-check.md
scripts/: bias_analysis.yaml
sites/redoio/: CONTEXT.md  purpose.md  roles.yaml
sites/redoio/docs/adr/: 0001-three-layer-purpose-criteria-report-stack.md
sites/redoio/journeys/: bias_analysis.yaml  my-flow.yaml  my-flow2.yaml  redoio-home.yaml  scenario-builder.yaml
src/runner/: cli.py  journey.py  recorder.py  runner.py
src/tracker/: recorder.py
test descriptions/: Bias Analysis.md
