[project]
name = "site-runner"
version = "0.1.0"
description = "Drive a Site through a Journey, capture screenshots / HTTP / WebSocket frames / console / dataLayer, and produce a Usability Review or Analytics Data Collection Report."
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.48.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.scripts]
site-runner = "runner.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/runner"]
